--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apollo-cache-inmemory": "^1.0.0",
     "apollo-client": "^2.0.1",
     "apollo-link": "^1.0.0",
+    "apollo-link-context": "^1.0.0",
     "apollo-link-http": "^1.1.0",
     "apollo-link-ws": "^1.0.0",
     "apollo-utilities": "^1.0.1",
