--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "apollo-link-http": "^1.1.0",
     "apollo-link-ws": "^1.0.0",
     "apollo-utilities": "^1.0.1",
+    "babel-runtime": "^6.26.0",
     "element-ui": "^1.4.4",
     "graphql": "^0.11.7",
     "graphql-tag": "^2.5.0",
     "jsonwebtoken": "^8.1.0",
+    "net": "^1.0.2",
     "scriptjs": "^2.5.8",
+    "subscriptions-transport-ws": "^0.9.1",
+    "tls": "0.0.1",
     "vue": "^2.4.2",
     "vue-apollo": "^3.0.0-alpha.1",
     "vue-router": "^2.7.0"
